--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -13,14 +13,14 @@
             </div>
         </xpath>
 
-        <xpath expr="//p[@t-field='doc.note']" position="replace">
-            <div style="margin-top:40px;">
-                <strong style="border-bottom:solid 1px;">Order Terms and Conditions</strong>
-                <p class="mb-1" t-field="doc.note" style="margin-left: 50px;"/>
+<!--         <xpath expr="//p[@t-field='doc.note']" position="replace">-->
+<!--              <div style="margin-top:40px;">-->
+<!--                <strong style="border-bottom:solid 1px;">Order Terms and Conditions</strong>-->
+<!--                <p class="mb-1" t-field="doc.note" style="margin-left: 50px;"/>-->
 
-<!--                <span t-field="doc.note"/>-->
-            </div>
-        </xpath>
+<!--&lt;!&ndash;                <span t-field="doc.note"/>&ndash;&gt;-->
+<!--            </div>-->
+<!--        </xpath>-->
 
         <xpath expr="//table[hasclass('table','table-sm','o_main_table')]" position="before">
             <span style="font-size:20px;">
