--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -182,9 +182,9 @@
         </xpath>
 
         <!-- Hidden information block from base report  -->
-        <xpath expr="//div[@id='informations']" position="replace"/>
+        <xpath expr="//div[hasclass('page')]/div[@id='informations']" position="replace"/>
         <!-- Hidden Quotation & Order # from base report  -->
-        <xpath expr="//h2[hasclass('mt16')]" position="replace">
+        <xpath expr="//div[hasclass('page')]/h2" position="replace">
         </xpath>
         <!-- Added info table beside total summery table  -->
         <xpath expr="//div[@name='so_total_summary']" position="replace">
