--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -115,18 +115,18 @@
             </t>
         </xpath>
         <xpath expr="//div[@t-attf-class='footer o_boxed_footer o_company_#{company.id}_layout']" position="replace">
-            <t t-if="not o" t-set="o" t-value="doc"/>
-            <t t-if="doc_model in ['sale.order','purchase.order']">
-                <div t-attf-class="footer o_company_#{company.id}_layout">
-                    <div class="text-center" style="border-top: 3px solid black; padding-bottom:30px; text-color: black;">
-                        <!--                        <div t-field="company.report_footer" style="font-size: 90%; text-color: black;"/>-->
-                        <!--                        <div t-if="report_type == 'pdf'">-->
+            <t t-if="doc_model == 'purchase.order'and xmlid == 'purchase.report_purchaseorder' ">
+                <div t-attf-class="footer o_boxed_footer o_company_#{company.id}_layout">
+                    <!--                     <br/>-->
+                    <!--                     <br/>-->
+                    <!--                     <br/>-->
+                    <!--                     <br/>-->
+                    <!--                     <br/>-->
+                    <div class="text-center last-page mb-0 ">
 
-                        <!--                            Page: <span class="page"/> / <span class="topage"/>-->
-                        <!--                        </div>-->
-                        <div  t-if="report_type == 'pdf'">
-                            <span  t-field="res_company.partner_id.name"/>
-                            <span style="margin-right: 15px;" t-field="res_company.partner_id.street"/>
+                        <!--                        <div t-field="company.report_footer"/>-->
+                        <div class="mb-0" style="margin-bottom: 0px;">
+                            <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>
                             |
                             <span style="margin-left: 15px;" t-field="res_company.partner_id.city"/>
                             <span t-field="res_company.partner_id.state_id"/>
@@ -139,6 +139,12 @@
                         <div t-if="report_type == 'pdf'">
                          Page: <span class="page"/> / <span class="topage"/>
                         </div>
+                    </div>
+                    <div t-if="report_type == 'pdf'" class="text-center mt-1">
+                        Page:
+                        <span class="page"/>
+                        /
+                        <span class="topage"/>
                     </div>
 
                 </div>
@@ -171,7 +177,8 @@
 <!--                </div>-->
 <!--            </t>-->
             <t t-else="">
-                <div t-attf-class="footer o_company_#{company.id}_layout">
+                <div t-attf-class="footer o_boxed_footer o_company_#{company.id}_layout"
+                     style="margin-bottom: 0px; margin-left: 0px; margin-right: 0px;">
                     <div class="text-center last-page">
                         <div class="mb-0" style="margin-bottom: 0px;">
                             <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>
@@ -187,6 +194,13 @@
                             <span t-field="res_company.partner_id.website"
                                   style="margin-left: 15px; margin-right: 15px;"/>
                         </div>
+
+                    </div>
+                    <div t-if="report_type == 'pdf'" class="text-center mt-1">
+                        Page:
+                        <span class="page"/>
+                        /
+                        <span class="topage"/>
                     </div>
                 </div>
             </t>
