[IMP] Sale order report error

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -9,6 +9,9 @@
             <xpath expr="//field[@name='order_line']/tree/field[@name='name']" position="after">
                 <field name="picking_note"/>
             </xpath>
+             <xpath expr="//field[@name='payment_term_id']" position="after">
+                <field name="valid_until"/>
+            </xpath>
             <!--Common Picking Note-->
             <xpath expr="//group[@name='note_group']" position="after">
                 <group name="common_note" col="6" class="mt-2 mt-md-0">
