--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -64,7 +64,7 @@
                         <div class="col-6">
 
                             <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" alt="Logo"/>
-                            <div style="top-margin:50px; margin-bottom:10px;" t-field="o.company_id.partner_id"
+                            <div style="top-margin:50px; padding-bottom:10px;" t-field="o.company_id.partner_id"
                                  t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
 
                         </div>
@@ -115,32 +115,61 @@
             </t>
         </xpath>
         <xpath expr="//div[@t-attf-class='footer o_boxed_footer o_company_#{company.id}_layout']" position="replace">
-            <t t-if="doc_model == 'purchase.order'and xmlid == 'purchase.report_purchaseorder' ">
+            <t t-if="not o" t-set="o" t-value="doc"/>
+            <t t-if="doc_model in ['sale.order','purchase.order']">
                 <div t-attf-class="footer o_company_#{company.id}_layout">
-
-                    <div class="text-center last-page">
-
-                        <!--                        <div t-field="company.report_footer"/>-->
-                        <div class="mb-0" style="margin-bottom: 0px;">
-                            <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>
-                            |
-                            <span t-field="res_company.partner_id.street"
-                                  style="margin-left: 15px; margin-right: 15px;"/>
-                            |
-                            <span t-field="res_company.partner_id.phone"
-                                  style="margin-left: 15px; margin-right: 15px;"/>
-                            |
-                            <span t-field="res_company.partner_id.city" style="margin-left: 15px; margin-right: 15px;"/>
-                            |
-                            <span t-field="res_company.partner_id.website"
-                                  style="margin-left: 15px; margin-right: 15px;"/>
-                        </div>
+                    <div class="text-center" style="border-top: 3px solid black; padding-bottom:30px; text-color: black;">
+                        <!--                        <div t-field="company.report_footer" style="font-size: 90%; text-color: black;"/>-->
                         <!--                        <div t-if="report_type == 'pdf'">-->
+
                         <!--                            Page: <span class="page"/> / <span class="topage"/>-->
                         <!--                        </div>-->
+                        <div  t-if="report_type == 'pdf'">
+                            <span  t-field="res_company.partner_id.name"/>
+                            <span style="margin-right: 15px;" t-field="res_company.partner_id.street"/>
+                            |
+                            <span style="margin-left: 15px;" t-field="res_company.partner_id.city"/>
+                            <span t-field="res_company.partner_id.state_id"/>
+                            <span style="margin-right: 15px;" t-field="res_company.partner_id.zip"/>
+                            |
+                            <span style="margin-left: 15px;margin-right: 15px;" t-field="res_company.partner_id.phone"/>
+                            |
+                            <span style="margin-left: 15px;" t-field="res_company.partner_id.website"/>
+                        </div>
+                        <div t-if="report_type == 'pdf'">
+                         Page: <span class="page"/> / <span class="topage"/>
+                        </div>
                     </div>
+
                 </div>
             </t>
+<!--        <xpath expr="//div[@t-attf-class='footer o_boxed_footer o_company_#{company.id}_layout']" position="replace">-->
+<!--            <t t-if="doc_model == 'purchase.order'and xmlid == 'purchase.report_purchaseorder' ">-->
+<!--                <div t-attf-class="footer o_company_#{company.id}_layout">-->
+
+<!--                    <div class="text-center last-page">-->
+
+<!--                        &lt;!&ndash;                        <div t-field="company.report_footer"/>&ndash;&gt;-->
+<!--                        <div class="mb-0" style="margin-bottom: 0px;">-->
+<!--                            <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                            |-->
+<!--                            <span t-field="res_company.partner_id.street"-->
+<!--                                  style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                            |-->
+<!--                            <span t-field="res_company.partner_id.phone"-->
+<!--                                  style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                            |-->
+<!--                            <span t-field="res_company.partner_id.city" style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                            |-->
+<!--                            <span t-field="res_company.partner_id.website"-->
+<!--                                  style="margin-left: 15px; margin-right: 15px;"/>-->
+<!--                        </div>-->
+<!--                                                <div t-if="report_type == 'pdf'">-->
+<!--                                                    Page: <span class="page"/> / <span class="topage"/>-->
+<!--                                                </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </t>-->
             <t t-else="">
                 <div t-attf-class="footer o_company_#{company.id}_layout">
                     <div class="text-center last-page">
