--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -3,6 +3,7 @@
 
     <template id="report_saleorder_document_extended"
               inherit_id="sale.report_saleorder_document">
+
         <!-- Show table header in all pages  -->
         <xpath expr="//table[hasclass('table','table-sm','o_main_table')]" position="before">
             <div>
@@ -74,13 +75,13 @@
         <xpath expr="//t[@t-if='not line.display_type']" position="replace">
             <t t-if="not line.display_type">
                 <td style="border-top: 1px solid black; border-left: none;
-                border-right: none;" name="td_sn" class="text-center">
+                border-right: none; border-bottom: 1px solid black;" name="td_sn" class="text-center">
                     <span t-esc="sn"/>
                     <br/>
                     <t t-set="sn" t-value="sn+1"/>
                 </td>
                 <td style="border-top: 1px solid black; border-left: none;
-                border-right: none;" name="image" class="text-center">
+                border-right: none; border-bottom: 1px solid black;" name="image" class="text-center">
                     <t t-if="line.product_id.image_1920">
                         <img t-attf-src="data:image/*;base64,{{line.product_id.image_1920}}"
                              style="max-height:100px; max-width:100px;"/>
@@ -92,7 +93,7 @@
                     </t>
                 </td>
                 <td name="td_name" style="width:30%; border-top: 1px solid black; border-left: none;
-                border-right: none;">
+                border-right: none; border-bottom: 1px solid black;">
 
                     <b>
                         <span t-field="line.product_id.name"/>
@@ -113,14 +114,14 @@
                 </td>
 
                 <td style="border-top: 1px solid black; border-left: none;
-                 border-right: none;" name="td_quantity" class="text-center">
+                 border-right: none;border-bottom: 1px solid black;" name="td_quantity" class="text-center">
                     <span t-if="float(line.product_uom_qty).is_integer()"
                           t-esc="int(line.product_uom_qty)"/>
                     <span t-if="not float(line.product_uom_qty).is_integer()"
                           t-field="line.product_uom_qty"/>
                 </td>
                 <td style="border-top: 1px solid black; border-left: none;
-                            border-right: none;"
+                            border-right: none; border-bottom: 1px solid black;"
                     name="td_uom" class="text-center">
                     <t t-if="line.discount">
                         <s>
@@ -135,7 +136,7 @@
 
                 </td>
                 <td style="border-top: 1px solid black; border-left: none;
-                     border-right: none;" name="td_priceunit" class="text-center">
+                     border-right: none; border-bottom: 1px solid black;" name="td_priceunit" class="text-center">
                     <span>
                         <!--                    <t t-esc="data['td_priceunit']" t-options='{"widget": "monetary", "display_currency": currency}'/>-->
                         <t t-if="line.discount">
@@ -158,7 +159,7 @@
                     <span t-esc="', '.join(map(lambda x: (x.description or x.name), line.tax_id))"/>
                 </td> -->
                 <td style="border-top: 1px solid black; border-left: none;
-                border-right: none;"
+                border-right: none; border-bottom: 1px solid black;"
                     name="td_subtotal" class="text-center">
                     <span t-field="line.price_subtotal"
                           groups="account.group_show_line_subtotals_tax_excluded"/>
@@ -188,69 +189,74 @@
         </xpath>
         <!-- Added info table beside total summery table  -->
         <xpath expr="//div[@name='so_total_summary']" position="replace">
-            <div class="clearfix row" name="so_total_summary">
-                <div class="col-6">
-                    <span style="color:black;">
-                        <b>Total Savings:
-                        </b>
-                        <span t-esc="sum((line.product_uom_qty*line.price_unit)-line.price_subtotal for line in doc.order_line)"
-                              t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
-                    </span>
-                </div>
-                <div class="offset-2 col-4">
-                    <div>
-                        <table style="border: none;"
+            <div class="clearfix" name="so_total_summary">
+                <div class="row">
+                <div  class="col-6">
+                        <span style="color:black;">
+                            <b>Total Savings:
+                            </b>
+                            <span t-esc="sum((line.product_uom_qty*line.price_unit)-line.price_subtotal for line in doc.order_line)"
+                                  t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
+                        </span>
+                    </div>
+                    <div class="offset-2 col-4">
+                        <div>
+                            <table style="width:200pt; height:140pt">
+                                <tr>
+                                    <td style="height:1px; width: 100px; border-top: 1px solid black;"
+                                        class="text-center">
+                                        <strong>Subtotal</strong>
+                                    </td>
 
-                               class="table table-borderless">
-                            <tr>
-                                <td style="border: none;" class="text-right">
-                                    <strong>Subtotal</strong>
-                                </td>
+                                    <td style="height:1px; border-top: 1px solid black;" class="text-center">
+                                        <span t-field="doc.amount_untaxed"/>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="height:1px; width: 100px; border-top: 1px solid black;"
+                                        class="text-center">
+                                        <strong class="text-right">Tax</strong>
+                                    </td>
+                                    <td style="height:1px; border-top: 1px solid black;" class="text-center">
+                                        <span t-field="doc.amount_tax"/>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="height:1px; width: 100px;border-top: 1px solid black;"
+                                        class="text-center">
+                                        <strong class="text-left">Shipping</strong>
+                                        <br/>
+                                        <t t-if="doc.carrier_id">
+                                            (<span style="font-size:14px;" t-field="doc.carrier_id"/>)
+                                        </t>
+                                    </td>
+                                    <td style="height:1px;width: 100px; border-top: 1px solid black;"
+                                        class="text-center">
+                                        <!--                                    <span t-field="doc.product_id.carrier_id."/>-->
+                                        <t t-esc="sum([line.price_total for line in doc.order_line if line.is_delivery])"
+                                           t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>
+                                        </t>
+                                        <!--                                    <span t-field="doc.delivery_price"/>-->
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="border-top: 1px solid black; height:1pt" class="text-center">
+                                        <strong class="border-black o_subtotal;text-right">Total</strong>
+                                    </td>
+                                    <td style="border-top: 1px solid black; height:1pt " class="text-center">
+                                        <span t-field="doc.amount_total"/>
 
-                                <td style="border: none;" class="text-right">
-                                    <span t-field="doc.amount_untaxed"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="border: none;" class="text-right">
-                                    <strong class="text-right">Tax</strong>
-                                </td>
-                                <td style="border: none;" class="text-right">
-                                    <span t-field="doc.amount_tax"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="border: none;" class="text-right">
-                                    <strong class="text-left">Shipping</strong>
-                                    <br/>
-                                    <t t-if="doc.carrier_id">
-                                        (<span style="font-size:14px;" t-field="doc.carrier_id"/>)
-                                    </t>
-                                </td>
-                                <td style="border: none;" class="text-right">
-                                    <!--                                    <span t-field="doc.product_id.carrier_id."/>-->
-                                    <t t-esc="sum([line.price_total for line in doc.order_line if line.is_delivery])"
-                                       t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>
-                                    </t>
-                                    <!--                                    <span t-field="doc.delivery_price"/>-->
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="border: none;" class="text-right">
-                                    <strong class="text-right">Total</strong>
-                                </td>
-                                <td style="border: none;" class="text-right">
-                                    <span t-field="doc.amount_total"/>
-
-                                    <!--                         <span t-field="doc.amount_untaxed"/>
-            -->
-                                </td>
-                            </tr>
-                        </table>
+                                        <!--                         <span t-field="doc.amount_untaxed"/>
+                -->
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </xpath>
+
         <xpath expr="//t[@t-if='doc.partner_shipping_id == doc.partner_invoice_id
                              and doc.partner_invoice_id != doc.partner_id
                              or doc.partner_shipping_id != doc.partner_invoice_id']"
@@ -270,7 +276,6 @@
             </t>
         </xpath>
     </template>
-
 
     <template id="address_layout_extended_sale"
               inherit_id="bista_purchase.address_layout_extended">
@@ -295,16 +300,17 @@
                 </t>
                 <t t-if="doc.state not in ['draft','sent']">
                     <strong>Order Date:</strong>
-                    <span t-esc="datetime.datetime.now()" t-options='{"widget": "date"}'></span>
+                    <span t-esc="datetime.datetime.now()" t-options='{"widget": "date"}'>
+                    </span>
                     <br/>
                 </t>
                 <strong>Customer Ref:</strong>
                 <t t-esc="doc.client_order_ref"/>
                 <br/>
                 <strong>Valid Until:</strong>
-                <t t-foreach="doc.payment_term_id" t-as="payment">
-                    <t t-esc="payment.name"/>
-                </t>
+                 <t t-if="doc.state in ['draft','sent']">
+                  <t t-esc="doc.valid_until"/>
+                 </t>
                 <br/>
                 <strong>Salesperson:</strong>
                 <t t-esc="o.user_id.name"/>
@@ -312,5 +318,4 @@
             </t>
         </xpath>
     </template>
-
 </odoo>
