--- a/website_bookpal_inquiry/views/templates.xml
+++ b/website_bookpal_inquiry/views/templates.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <template id="product_selection" name="Product Selection">
-        <div t-attf-class="form-group #{error.get('product') and 'o_has_error' or ''} col-xl-6">
+        <div class="form-group col-xl-6">
             <label class="col-form-label" for="name">Product</label>
             <select type="text" class="product_id form-control" name="product_id">
                 <t t-set="select_op" t-value="json.dumps({'id': '', 'display_name': '--- Select Product ---'})"/>
@@ -13,7 +13,7 @@
         </div>
     </template>
     <template id="product_inquiry" name="Website Product Inquiry">
-        <form id="website-inquiry" method="post" action="/inquiry">
+        <form id="website-inquiry" method="post" action="/inquiry-submit">
             <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
             <div class="row o_product_inquiry">
                 <div class="col-lg-12">
@@ -24,18 +24,22 @@
                             </div>
                         </div>
                         <t t-call="website_bookpal_inquiry.product_selection"/>
-                        <div t-attf-class="form-group #{error.get('quantity') and 'o_has_error' or ''} col-xl-6">
+                        <div class="form-group col-xl-6">
                             <label class="col-form-label" for="name">Quantity</label>
-                            <input type="text" name="quantity" t-attf-class="form-control #{error.get('quantity') and 'is-invalid' or ''}" t-att-value="quantity or 1" />
+                            <input type="text" name="quantity" class="form-control" t-att-value="quantity or 1" />
                         </div>
-                        <div t-attf-class="form-group #{error.get('quantity') and 'o_has_error' or ''} col-xl-12">
+                        <div class="form-group col-xl-6">
+                            <label class="col-form-label" for="email">Email</label>
+                            <input type="email" required="required" name="email" class="form-control" t-att-value="email" />
+                        </div>
+                        <div class="form-group col-xl-12">
                             <label class="col-form-label" for="name">Notes</label>
-                            <textarea name="notes" t-attf-class="form-control #{error.get('quantity') and 'is-invalid' or ''}" t-att-value="quantity or 1" />
+                            <textarea name="notes" class="form-control" t-att-value="quantity or 1" />
                         </div>
                     </div>
                     <div class="clearfix">
-                        <button type="submit" class="btn btn-primary mb32">
-                            Confirm
+                        <button type="submit" class="submit btn btn-primary mb32">
+                            Submit Inquiry
                         </button>
                     </div>
                 </div>
@@ -46,6 +50,7 @@
     <template id="website_inquiry" name="Website Inquiry">
         <t t-call="portal.portal_layout">
             <t t-set="additional_title">Inquiry</t>
+            <t t-set="no_breadcrumbs" t-value="true"/>
             <div class="container">
                 <t t-call="website_bookpal_inquiry.product_inquiry"/>
             </div>
