--- a/bista_purchase/report/purchase_quotation_templates.xml
+++ b/bista_purchase/report/purchase_quotation_templates.xml
@@ -149,64 +149,64 @@
         </xpath>
     </template>
 
-    <template id="document_tax_totals_extended" inherit_id="account.document_tax_totals">
-        <xpath expr="//td[1]" position="replace">
-            <td style="border-right: 1px solid black;">Subtotal</td>
-        </xpath>
+<!--    <template id="document_tax_totals_extended" inherit_id="account.document_tax_totals">-->
+<!--        <xpath expr="//td[1]" position="replace">-->
+<!--            <td style="border-right: 1px solid black;">Subtotal</td>-->
+<!--        </xpath>-->
 
-        <xpath expr="//t[@t-as='subtotal']" position="before">
+<!--        <xpath expr="//t[@t-as='subtotal']" position="before">-->
 
-            <tr class="border-black o_subtotal">
-                <td>
-                    <span>Without Disc Total</span>
-                </td>
-                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
-                    <span t-field="o.without_disc_amount_untaxed"/>
-                </td>
-            </tr>
-            <tr class="border-black o_subtotal">
-                <td>
-                    <span>Discount</span>
-                </td>
-                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
-                    <span t-field="o.total_discount_amount"/>
-                </td>
-            </tr>
-            <t t-if="'groups_by_subtotal' in tax_totals and len(tax_totals['groups_by_subtotal']) == 0">
-                <tr class="border-black o_subtotal">
-                    <td>
-                        <span>Subtotal</span>
-                    </td>
-                    <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
-                        $
-                        <span t-esc="0.0"/>
-                        <!--                        <span t-esc="tax_totals"/>-->
-                    </td>
-                </tr>
-                <tr class="border-black o_subtotal">
-                    <td>
-                        <span>Tax</span>
-                    </td>
-                    <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
-                        $
-                        <span t-esc="0.0"/>
-                        <!--                        <span t-esc="tax_totals"/>-->
-                    </td>
-                </tr>
-            </t>
-        </xpath>
-        <xpath expr="//tr[hasclass('o_total')]" position="before">
-            <tr class="border-black o_subtotal">
-                <td>
-                    <span>Shipping</span>
-                </td>
-                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
-                    <div>
-                        $
-                        <span t-esc="0.0"/>
-                    </div>
-                </td>
-            </tr>
-        </xpath>
-    </template>
+<!--            <tr class="border-black o_subtotal">-->
+<!--                <td>-->
+<!--                    <span>Without Disc Total</span>-->
+<!--                </td>-->
+<!--                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">-->
+<!--                    <span t-field="o.without_disc_amount_untaxed"/>-->
+<!--                </td>-->
+<!--            </tr>-->
+<!--            <tr class="border-black o_subtotal">-->
+<!--                <td>-->
+<!--                    <span>Discount</span>-->
+<!--                </td>-->
+<!--                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">-->
+<!--                    <span t-field="o.total_discount_amount"/>-->
+<!--                </td>-->
+<!--            </tr>-->
+<!--            <t t-if="'groups_by_subtotal' in tax_totals and len(tax_totals['groups_by_subtotal']) == 0">-->
+<!--                <tr class="border-black o_subtotal">-->
+<!--                    <td>-->
+<!--                        <span>Subtotal</span>-->
+<!--                    </td>-->
+<!--                    <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">-->
+<!--                        $-->
+<!--                        <span t-esc="0.0"/>-->
+<!--                        &lt;!&ndash;                        <span t-esc="tax_totals"/>&ndash;&gt;-->
+<!--                    </td>-->
+<!--                </tr>-->
+<!--                <tr class="border-black o_subtotal">-->
+<!--                    <td>-->
+<!--                        <span>Tax</span>-->
+<!--                    </td>-->
+<!--                    <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">-->
+<!--                        $-->
+<!--                        <span t-esc="0.0"/>-->
+<!--                        &lt;!&ndash;                        <span t-esc="tax_totals"/>&ndash;&gt;-->
+<!--                    </td>-->
+<!--                </tr>-->
+<!--            </t>-->
+<!--        </xpath>-->
+<!--        <xpath expr="//tr[hasclass('o_total')]" position="before">-->
+<!--            <tr class="border-black o_subtotal">-->
+<!--                <td>-->
+<!--                    <span>Shipping</span>-->
+<!--                </td>-->
+<!--                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">-->
+<!--                    <div>-->
+<!--                        $-->
+<!--                        <span t-esc="0.0"/>-->
+<!--                    </div>-->
+<!--                </td>-->
+<!--            </tr>-->
+<!--        </xpath>-->
+<!--    </template>-->
 </odoo>
